Even more docs refactoring

--- a/docs/release/0.6.md
+++ b/docs/release/0.6.md
@@ -18,7 +18,7 @@ Release 0.6.2 fixed a number of bugs.
 
 ## Changes to Existing Configuration Modules
 
-* [Use OSPF link roles](../module/ospf.html#using-link-roles) to exclude links from the OSPF process, or to make an OSPF interface passive.
+* [Use OSPF link roles](../module/ospf.md#using-link-roles) to exclude links from the OSPF process, or to make an OSPF interface passive.
 
 ## New Utility Playbooks
 
