Major documentation overhaul

--- a/docs/release/0.4.md
+++ b/docs/release/0.4.md
@@ -11,7 +11,7 @@ Minor fixes:
 
 * Use custom SSH port in **connect.sh**
 * Tags added to **[initial-config.ansible](../configs.md)**
-* Changed [default Ansible inventory format](../create-topology.md#usage)
+* Changed [default Ansible inventory format](../create-topology.md)
 * *Bandwidth* became a [core link attribute](../links.md#link-attributes)
 
 Internal changes (detailed below):
