Fixed the EIGRP status -- its not there yet

--- a/docs/release/0.6x.md
+++ b/docs/release/0.6x.md
@@ -2,12 +2,13 @@
 
 ## New Configuration Modules
 
-* [EIGRP configuration module](../module/eigrp.md)
+* [EIGRP configuration module](../module/eigrp.md) -- not yet there
 
 ## Changes to Existing Configuration Modules
 
-* **bgp.advertise_loopback** parameter controls BGP advertisement of loopback prefix
-* **bgp.originate** parameter generates additional BGP prefixes supported by static route to *null* interface. [More details](../module/bgp.md#advertised-bgp-prefixes).
+* **bgp.advertise_loopback** parameter controls BGP advertisement of loopback prefix (implemented on all platforms)
+* **bgp.originate** parameter generates additional BGP prefixes supported by static route to *null* interface (IOS only at the moment). [More details](../module/bgp.md#advertised-bgp-prefixes).
+* **ospf.reference_bandwidth** sets OSPF auto-cost reference bandwidth in Mbps for the whole network or for an individual node (and handles unit conversion for Junos and NXOS).
 
 ## Other Changes
 
