--- a/docs/release/0.6x.md
+++ b/docs/release/0.6x.md
@@ -2,7 +2,7 @@
 
 ## New Configuration Modules
 
-* [EIGRP configuration module](../module/eigrp.md) -- not yet there
+* [EIGRP configuration module](../module/eigrp.md)
 
 ## Changes to Existing Configuration Modules
 
