--- a/docs/release/0.7.md
+++ b/docs/release/0.7.md
@@ -1,4 +1,4 @@
-# Changes in Release 0.6.x/0.7
+# Changes in Release 0.7
 
 ## New Configuration Modules
 
@@ -6,9 +6,16 @@
 
 ## Changes to Existing Configuration Modules
 
+* BGP IPv6 address family is now configured as part of BGP configuration process.
+* [BGP community propagation](../module/bgp.md#bgp-communities-propagation) is controlled with **bgp.community** parameter
 * **bgp.advertise_loopback** parameter controls BGP advertisement of loopback prefix (implemented on all platforms)
 * **bgp.originate** parameter generates additional BGP prefixes supported by static route to *null* interface (IOS only at the moment). [More details](../module/bgp.md#advertised-bgp-prefixes).
 * **ospf.reference_bandwidth** sets OSPF auto-cost reference bandwidth in Mbps for the whole network or for an individual node (and handles unit conversion for Junos and NXOS).
+* IS-IS P2P mode is now used on all P2P links (not just unnumbered)
+
+## Changes to *netsim-tools* utilities
+
+* **initial-config.ansible** playbook takes **modlist** external variable which can be used to narrow down the list of configuration modules configured on network devices.
 
 ## Other Changes
 
